_sass/_main.scss
// If a user adds a custom font, this component will stop it from bleeding into GitHub components:
.github-component {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
}

.repo-language-color {
  filter: brightness(125%) !important;
  border-radius: 50%;
  display: inline-block;
  height: 12px;
  position: relative;
  top: 2px;
  width: 12px;
}

.article {
  h1,
  h2,
  h3,
  h4,
  .highlight {
    margin-bottom: 16px;
  }

  blockquote {
    color: #6a737d;
    border-left: 2px solid #959da5;
    padding-left: 16px;
    margin-bottom: 16px;
  }

  ul,
  ol {
    padding-left: 32px;
    margin-bottom: 16px;
  }

  li ul,
  li ol {
    padding-left: 16px;
    margin-bottom: 0px;
  }
}

a,
a:visited {
  color: #007dbd;
  text-decoration: none;
}

a:hover {
  color: #005987;
}

.navigation-link a:hover {
  text-decoration: none;
}

.text-center {
  text-align: center;
}

.color-text-dark-gray {
  color: darkgray;
}

.min-height-full {
  min-height: 100vh;
}

.current {
  font-weight: bold;
}

.profile-wrapper {
  display: flex;
  width: 100%;
  align-items: flex-start;
  justify-content: center;
}

.post-subtitle,
.post-date {
  font-size: 14px;
}

.horizontal-line {
  width: 70%;
}

